@@ -1,6 +1,7 @@
 Cascading-jdbc Change Log
 
 2.6.0 [unreleased]
+- enabled parameter sanitization for username and password
 - added support for Teradata (cascading-jdbc-teradata)
 - update to cascading 2.6
 
